--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
     "name": "directus-extension-drawer-notice",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "A notice field that is only visible in the drawer",
     "license": "GPL-3.0",
-    "author": "formfcw",
+    "author": {
+        "email": "dev@formfcw.com",
+        "name": "formfcw"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/formfcw/directus-extension-drawer-notice"
